--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,4 +1,4 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em,  
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em,  
 font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody,  
 tfoot, thead, tr, th, td {  
     border:0pt none;  
@@ -9,7 +9,42 @@ tfoot, thead, tr, th, td {
     margin:0pt;  
     padding:0pt;  
     vertical-align:baseline;  
+    
+    margin-top:0px;
+    margin-bottom:0px;
 }  
+
+a {
+    border:0pt none;  
+    font-family:inherit;  
+    font-size:100%;  
+    font-style:inherit;  
+    font-weight:inherit;  
+    margin:0pt;  
+    padding:0pt;  
+    vertical-align:baseline;  
+    
+    margin-top:0px;
+    margin-bottom:0px;
+    
+    padding-top:5px;
+    padding-bottom:5px;
+    
+}
+
+h5 {
+    border:0pt none;  
+    font-family:inherit;  
+    font-size:60%;  
+    font-style:inherit;  
+    font-weight:inherit;  
+    margin:0pt;  
+    margin-top:0px;
+    margin-bottom:0px;
+    margin-left:30px;
+    padding:0pt;  
+    vertical-align:baseline;
+}
 
 h6 {
     border:0pt none;  
@@ -18,8 +53,27 @@ h6 {
     font-style:inherit;  
     font-weight:inherit;  
     margin:0pt;  
+    margin-top:0px;
+    margin-bottom:0px;
+    margin-left:30px;
     padding:0pt;  
     vertical-align:baseline;
+}
+
+
+p {
+    border:0pt none;  
+    font-family:inherit;  
+    font-size:60%;  
+    font-style:inherit;  
+    font-weight:inherit;  
+    margin:0pt;  
+    margin-top:0px;
+    margin-bottom:0px;
+    margin-left:30px;
+    padding:0pt;  
+    vertical-align:baseline;
+    display:inline;
 }
 
 body{  
