--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -229,3 +229,10 @@ table.tablesorter thead tr .headerSortUp {
 table.tablesorter thead tr .headerSortDown {
 	background-image: url("images/tablesorter/desc.gif");
 }
+
+
+
+.comment_input {
+    height: 20px; 
+    width: 350px;
+}
