--- a/assets/jquery-ui-1.8.16.custom/css/custom-theme/jquery-ui-1.8.16.custom.css
+++ b/assets/jquery-ui-1.8.16.custom/css/custom-theme/jquery-ui-1.8.16.custom.css
@@ -8,6 +8,13 @@
  * http://docs.jquery.com/UI/Theming/API
  */
 
+ 
+/* Added by Kim Hsiao*/
+.formattedTable {
+    font-size:10px;
+    font-family:helvetica;
+}
+
 /* Layout helpers
 ----------------------------------*/
 .ui-helper-hidden { display: none; }
