--- a/assets/css/home_kim_css.css
+++ b/assets/css/home_kim_css.css
@@ -147,12 +147,12 @@ img.delete {
 }*/
 
 #add-to-list-comment {
-    height:100px;
+/*    height:100px;*/
 }
 
 #add-to-list-comment-box {
     width:100%;
-    height:80px;;
+/*    height:80px;;*/
 }
 
 #new-list-name {
